Web arayüzü hazırlanmaya başlandı.

--- a/templates/createpost.html
+++ b/templates/createpost.html
@@ -1,16 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Create Post</title>
+{% extends "base.html" %}
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
-</head>
-<body>
-<div class="container">
-
-
+{% block content %}
     <h1>New Post</h1>
 
     <hr/>
@@ -18,18 +8,18 @@
     <form method="POST" action="/post/create" accept-charset="UTF-8">
         <div class="form-group">
             <label for="title">Title:</label>
-            <input class="form-control" name="title" type="text" id="title">
+            <input class="form-control" name="title" type="text">
         </div>
 
         <div class="form-group">
             <label for="tag">Tag:</label>
-            <input class="form-control" name="tag" type="text" id="tag">
+            <input class="form-control" name="tag" type="text">
         </div>
 
 
         <div class="form-group">
             <label for="body">Title:</label>
-            <textarea class="form-control" name="body" cols="50" rows="10" id="body"></textarea>
+            <textarea class="form-control" name="body" cols="50" rows="10"></textarea>
         </div>
 
         {#        <div class="form-group">
@@ -42,9 +32,4 @@
         </div>
     </form>
 
-
-</div>
-
-
-</body>
-</html>
+{% endblock %}
