--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title> Login </title>
-</head>
-<body>
-/test
-<form action="/jst" method="post">
-    <p><input type=text name=username>
+{% extends "base.html" %}
 
-    <p><input type=password name=password>
+{% block content %}
+    <h1>Login</h1>
+    <hr>
 
-    <p><input type=submit value=Login>
-</form>
-</body>
-</html>
+    <form method="POST" action="/login" accept-charset="UTF-8">
+        <div class="form-group col-lg-4 col-md-offset-3">
+            <label for="username">Username:</label>
+            <input class="form-control" name="username" type="text">
+            <label for="password">Password:</label>
+            <input class="form-control" name="password" type="password">
+
+
+        </div>
+
+        <div class="form-group col-lg-4 col-md-offset-3">
+            {#        <div class="col-sm-10 controls"> #}
+            <input class="btn btn-default btn-primary form-control" type="submit" value="Add Post">
+            <h6 style="color: darkred ; text-align: left">dsajkldsa</h6>
+            {#        </div> #}
+        </div>
+
+    </form>
+{% endblock %}
